fix projects shield gap

--- a/src/scss/components/projects-shield.scss
+++ b/src/scss/components/projects-shield.scss
@@ -38,7 +38,7 @@
     gap: 174px;
 
     @include mini-desktop {
-      gap: 60px;
+      gap: 30px 60px;
     }
 
     @include small-tablet {
